[package]
name = "lab"
edition = "2021"
version.workspace = true
repository = "lab"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["lab"]
categories = ["lab"]
description = "lab"

[dependencies]
ahash = "0.8.11"
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
log = "0.4.21"
meminterval = "0.4.1"
nix = "0.27.0"
num-traits = "0.2.18"
serde = { version = "1.0.200", features = ["derive"] }
